<resources>
    <string name="app_name">Auto Background Eraser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Auto Background Eraser</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_a_photo">Select a Photo</string>
    <string name="dialog_menu_title">Choose Options</string>
    <string name="request_permission_message">Set permission first</string>
    <string name="automatically_replace_bg_text">Automatically replaces deleted Background</string>
    <string name="text_progress">Please wait</string>
    <string name="button_start">Start</string>
    <string name="button_select_photo">Select a Photo</string>
    <!-- error message -->
    <string name="error_code_400">File to large</string>
    <string name="error_code_402">Insufficient credits</string>
    <string name="error_code_403">"Missing API Key</string>
    <string name="error_code_429">"Rate limit exceeded</string>

    <string name="api_key">API Key</string>
    <string name="tutorial">Tutorial</string>
    <string name="text_button_next">NEXT</string>
    <string name="text_button_skip">SKIP</string>
    <string name="text_button_done">DONE</string>

    <string name="signup_removebg"><a href="https://www.remove.bg/users/sign_up">REGISTER</a></string>
    <string name="text_signup_message">Please click REGISTER below and register using an email account or use the social media listed, and fill in the requested field.</string>
    <string name="text_message_tutorial_2">After that the verification link will be sent to your email</string>
    <string name="text_message_tutorial_3">After that, click Confirm my account</string>
    <string name="text_message_tutorial_4">Please find the API menu then click</string>
    <string name="text_message_tutorial_5">then click Get API Key</string>
    <string name="text_message_tutorial_6">After that click Show, and copy paste the available API key</string>
    <string name="dialog_first_launch_message">Read the following tutorial to find out how to use this Application</string>
    <string name="dialog_first_launch_later_button">Later</string>
    <string name="dialog_first_launch_read_button">Read Tutorial</string>
    <string name="set_api_key_hint">Enter API Key</string>
    <string name="text_button_save">Save</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="rate_us">Rate US</string>
    <string name="input_api_key_empty_message">can not be empty !</string>
    <string name="about_app">About Application</string>
    <string name="privacy_policies">Privacy Policies</string>
    <string name="toolbar_title_about">About</string>
    <string name="toolbar_title_privacy_policy">Privacy Policy</string>
    <string name="about_app_text">Auto Background Eraser is an intermediary photo background editor tool application designed simple and elegant. Auto Background Eraser deletes image background now can be done easily by utilizing the API from the site https://remove.bg</string>
    <string name="popup_menu_save_title">Save</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="err_message_bg_image_file_null">Please set image which to use replace deleted background</string>
    <string name="err_message_no_api_key_set">The API key has not been set, please open the API Key menu and set the API key first, or read the following tutorial to get the API Key</string>
    <string name="button_positive_dialog_warning">Read Tutorial</string>
    <string name="button_negative_dialog_warning">Cancel</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">News</string>

</resources>
