<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_api_key_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_api_key"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:lines="1"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_action_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/text_button_save"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/button_action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:layout_toLeftOf="@id/button_action_save"
            android:layout_toStartOf="@id/button_action_save"
            android:text="@string/text_button_cancel"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </RelativeLayout>

</LinearLayout>