<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <android.support.v7.widget.CardView
            android:id="@+id/cv_main"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:padding="5dp"
                    android:layout_marginTop="3dp"
                    android:drawableStart="@drawable/ic_info_outline_progress"
                    android:drawableLeft="@drawable/ic_info_outline_progress"
                    android:drawablePadding="5dp"
                    android:text="@string/text_progress"/>

                <ImageView
                    android:id="@+id/iv_selected"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/tv_progress"
                    android:layout_centerInParent="true"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_image" />


                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />


            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <!-- Layout Options Replace Background -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_auto_replace_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_toStartOf="@id/cb_auto_replace_bg"
                android:layout_toLeftOf="@id/cb_auto_replace_bg"
                android:text="@string/automatically_replace_bg_text" />

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_selected_replace_bg"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_margin="5dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ib_add_image_replace_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@null"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_add" />

                <ImageView
                    android:id="@+id/iv_selected_replace_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/ib_add_image_replace_bg"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_image" />


            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_result"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_margin="5dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_transparent_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_image" />

                <ImageView
                    android:id="@+id/iv_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:scaleType="fitCenter"
                    tools:src="@drawable/ic_image" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_select_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/button_select_image_picker"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/select_a_photo"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />


        </RelativeLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>